--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "jquery": "^3.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-medium-image-zoom": "^5.1.8",
     "react-pageflip": "^2.0.3",
     "react-quick-pinch-zoom": "^5.0.0",
     "react-zoom-pan-pinch": "^3.2.0",
