--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "framer-motion": "^10.16.4",
     "jquery": "^3.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-medium-image-zoom": "^5.1.8",
+    "react-moving-text": "^0.0.7",
     "react-pageflip": "^2.0.3",
     "react-quick-pinch-zoom": "^5.0.0",
     "react-zoom-pan-pinch": "^3.2.0",
